# DietApp

./: .gitignore  CMakeLists.txt  README.md  flyway.toml
.github/workflows/: build.yml
include/: my_app.h  my_frame.h
include/core/: application.h
include/database/: database_adapter.h  database_manager.h  sqlite_database_adapter.h  user_repository.h
include/presentation/: my_app.h  my_frame.h
migrations/: V001_20250906163016__Database Initial Version.sql
pkgconfig/: libwx_gtk3u_core-3.2.pc
src/: CMakeLists.txt  my_app.cc  my_frame.cc
src/core/: CMakeLists.txt  application.cc
src/database/: CMakeLists.txt  database_manager.cc  sqlite_database_adapter.cc  user_repository.cc
src/presentation/: CMakeLists.txt  my_app.cc  my_frame.cc
